--- a/pow/package.json
+++ b/pow/package.json
@@ -20,6 +20,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {
+  "node": "10.16.0",
+  "npm": "9.9.0"
+},
   "browserslist": {
     "production": [
       ">0.2%",
